--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -13,6 +13,8 @@
     "com.unity.textmeshpro": "3.0.1",
     "com.unity.timeline": "1.4.7",
     "com.unity.ugui": "1.0.0",
+    "com.unity.ui": "1.0.0-preview.14",
+    "com.unity.ui.builder": "1.0.0-preview.14",
     "com.unity.xr.legacyinputhelpers": "2.1.7",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
